src/tui/widgets/popups/import_modpack/snapshots/rusted_tui_mc_launcher__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_confirm_step.snap
---
source: src/tui/widgets/popups/import_modpack/render.rs
expression: terminal.backend()
---
"╭导入整合包────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " ")]
"│Name: Synthetic Pack                                      │"
"│Pack Version: 1.0.0                                       │"
"│MC Version: 1.20.1                                        │"
"│Loader: Fabric 0.15.0                                     │"
"│Mods: 42 files                                            │"
"│Overrides: 3 files                                        │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰────────────────────────────────────[h] 返回  [Enter] 导入╯" Hidden by multi-width symbols: [(42, " "), (44, " "), (56, " "), (58, " ")]
