src/tui/widgets/popups/import_modpack/snapshots/rusted_tui_mc_launcher__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_confirm_step_without_loader_version.snap
---
source: src/tui/widgets/popups/import_modpack/render.rs
expression: terminal.backend()
---
"╭导入整合包────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " ")]
"│Name: Vanilla Pack                                        │"
"│Pack Version: 2.0                                         │"
"│MC Version: 1.20.1                                        │"
"│Loader: Vanilla                                           │"
"│Mods: 0 files                                             │"
"│Overrides: 12 files                                       │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰────────────────────────────────────[h] 返回  [Enter] 导入╯" Hidden by multi-width symbols: [(42, " "), (44, " "), (56, " "), (58, " ")]
