src/tui/widgets/popups/import_modpack/snapshots/rusted_tui_mc_launcher__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_input_step.snap
---
source: src/tui/widgets/popups/import_modpack/render.rs
expression: terminal.backend()
---
"╭导入整合包────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " ")]
"│URL, slug, or pack file path...█                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──────────────────────────────────────────────[Enter] 获取╯" Hidden by multi-width symbols: [(56, " "), (58, " ")]
