src/tui/widgets/popups/import_modpack/snapshots/rusted_tui_mc_launcher__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_version_step.snap
---
source: src/tui/widgets/popups/import_modpack/render.rs
expression: terminal.backend()
---
"╭导入整合包────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " ")]
"│▶ 1.0.0  1.20.1  fabric                                   │"
"│  0.9.0  1.20.1  fabric                                   │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──────────────────────────[/] 搜索  [h] 返回  [Enter] 选择╯" Hidden by multi-width symbols: [(32, " "), (34, " "), (42, " "), (44, " "), (56, " "), (58, " ")]
